[package]
name = "rhai-autodocs"
version = "0.4.0"
edition = "2021"
authors = ["Lucas Tabis"]
description = "Custom documentation generator for the Rhai scripting language"
homepage = "https://github.com/ltabis/rhai-autodocs"
repository = "https://github.com/ltabis/rhai-autodocs"
readme = "README.md"
license = "MIT"
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
keywords = [
    "scripting",
    "scripting-engine",
    "scripting-language",
    "documentation",
]
categories = ["development-tools"]

[dependencies]
rhai = { version = "1.16.2", features = ["metadata"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[[example]]
name = "basic"
path = "examples/basic/main.rs"
