[package]
name = "rhai-autodocs"
version = "0.5.4"
edition = "2021"
authors = ["Lucas Tabis"]
description = "Custom documentation generator for the Rhai scripting language"
homepage = "https://github.com/ltabis/rhai-autodocs"
repository = "https://github.com/ltabis/rhai-autodocs"
readme = "README.md"
license = "MIT"
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
keywords = [
    "scripting",
    "scripting-engine",
    "scripting-language",
    "documentation",
]
categories = ["development-tools"]

[dependencies]
rhai = { version = "1.18", features = ["metadata"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
handlebars = { version = "5.1.0" }

[dev-dependencies]
pretty_assertions = "1.4.0"

[[example]]
name = "basic"
path = "examples/basic/main.rs"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
