[package]
name = "rhai-autodocs"
version = "0.7.0"
edition = "2021"
authors = ["Lucas Tabis"]
description = "Custom documentation generator for the Rhai scripting language"
homepage = "https://github.com/ltabis/rhai-autodocs"
repository = "https://github.com/ltabis/rhai-autodocs"
readme = "README.md"
license = "MIT"
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
keywords = [
    "scripting",
    "scripting-engine",
    "scripting-language",
    "documentation",
]
categories = ["development-tools"]

[dependencies]
rhai = { version = "1.19.0", features = ["metadata"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
handlebars = { version = "6.1.0" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = []
no_float = ["rhai/no_float"]
no_index = ["rhai/no_index"]
no_time = ["rhai/no_time"]
no_object = ["rhai/no_object"]

[[example]]
name = "basic"
path = "examples/basic/main.rs"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
